--- a/index.html
+++ b/index.html
@@ -552,8 +552,7 @@
 
                     <div class="testimonials__slide">
                         
-                        <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                        Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+                        <p>Testimonials</p>
 
                         <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
                         <div class="testimonials__info">
@@ -594,7 +593,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Contact Us</h3>
-                <h1 class="display-2 display-2--light">Reach out for a new project or just say hello</h1>
+                <h1 class="display-2 display-2--light">Reach out to be amazed or grab a Beer</h1>
             </div>
         </div>
 
@@ -737,7 +736,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright DigiX 2017</span> 
+                    <span>© Copyright DigiX 2020</span> 
                     <span>Developed By Gawaksh</span>	
                 </div>
 
