--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     We are a creative group <br>
                     of people who design <br>
                     influential brands and <br>
-                    digital experiences.
+                    digital experiences around the world.
                 </h1>
 
                 <div class="home-content__buttons">
