--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                We are a bunch of locally and enthusiastic people who want to make brands better. 
+                We are a bunch of locally and enthusiastic people who want to make brands better and enthusiastic. 
                 </p>
             </div>
         </div> <!-- end about-desc -->
