--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">102</div>
+
+                <div class="stats__col">1006</div>
                 <h5>Happy Clients</h5> 
             </div>
 
