--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <!-- services
     ================================================== -->
     <section id='services' class="s-services">
-<import class="git">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</import>
+<import class="git">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clear</import>
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">What We Do</h3>
@@ -252,7 +252,7 @@
                     <h3 class="h2">Marketing</h3>
                     <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
                     Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    Sunt suscipit voluptas ipsa in tempora esse soluta sint and some .
                     </p>
                 </div>
             </div>
