recurring instances of data funnels

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <h3 class="h2">Marketing</h3>
                     <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
                     Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint and some .
+                    Sunt suscipit voluptas ipsa in tempora esse soluta sint and some git sta.
                     </p>
                 </div>
             </div>
@@ -277,7 +277,7 @@
                 <div class="service-text">
                     <h3 class="h2">Packaging Design</h3>
                     <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
+                    Quo delectus est. Maiores volshdksdgshdjhsdjhsjhsjhgdsjhgdjhsdjhsjhsdgdjhsgjhdgsjhdgjhsdgjhsguptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
                     Sunt suscipit voluptas ipsa in tempora esse soluta sint.
                     </p>
                 </div>
