--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
     <!-- services
     ================================================== -->
     <section id='services' class="s-services">
-<import class="git">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clear</import>
+
+<div class = "col-full"></div>
+        <import class="git">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clear</import>
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">What We Do</h3>
