--- a/index.html
+++ b/index.html
@@ -237,9 +237,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Illustration</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <p>Lorem Ipsum Dolor Seten
                     </p>
                 </div>
             </div>
